[gd_scene load_steps=9 format=3 uid="uid://svmwgrkp35fo"]

[ext_resource type="Texture2D" uid="uid://bwcnwr1eiluix" path="res://graphics/player/player.png" id="1_0nww7"]
[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_6upo2"]
[ext_resource type="Texture2D" uid="uid://crb8ib8frxsbv" path="res://graphics/decals/white.png" id="3_lcjhx"]

[sub_resource type="CircleShape2D" id="CircleShape2D_swp8s"]
radius = 67.0298

[sub_resource type="Gradient" id="Gradient_b2tfo"]
offsets = PackedFloat32Array(0.0149254, 0.373134, 0.708955, 1)
colors = PackedColorArray(0.855536, 0.296349, 0.0871657, 0.882353, 0.777693, 0.640466, 0.143979, 0.784314, 0.54902, 1, 1, 0.686275, 1, 1, 1, 0.392157)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_6t3xk"]
gradient = SubResource("Gradient_b2tfo")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_chrsn"]
particle_flag_disable_z = true
spread = 15.0
initial_velocity_min = 1200.0
initial_velocity_max = 1500.0
gravity = Vector3(0, 0, 0)
scale_min = 0.3
scale_max = 0.8
color_ramp = SubResource("GradientTexture1D_6t3xk")

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_jhbuq"]
polygon = PackedVector2Array(78, -9, 86, -10, 89, -10, 93, -8, 96, -5, 98, -3, 105, -3, 109, -2, 112, 0, 113, 4, 124, 3, 126, 5, 125, 7, 124, 9, 124, 10, 127, 8, 130, 7, 133, 10, 134, 13, 135, 18, 135, 27, 134, 30, 132, 33, 129, 35, 126, 35, 124, 34, 123, 33, 123, 35, 124, 37, 124, 39, 113, 40, 111, 37, 109, 37, 108, 39, 106, 42, 103, 45, 100, 46, 98, 46, 98, 52, 97, 54, 94, 55, 63, 55, 60, 53, 59, 50, 59, 47, 60, 45, 62, 43, 46, 43, 44, 42, 43, 43, 41, 45, 39, 46, 36, 47, 33, 48, 29, 49, 26, 49, 23, 50, 20, 52, 18, 54, 16, 55, 13, 56, 8, 58, 4, 60, 0, 60, -4, 60, -6, 61, -11, 62, -14, 62, -17, 62, -23, 62, -27, 60, -30, 58, -33, 56, -35, 52, -36, 48, -38, 45, -41, 40, -42, 36, -45, 34, -47, 32, -49, 30, -51, 26, -52, 22, -51, 20, -50, 19, -50, 17, -52, 16, -55, 15, -57, 10, -58, 7, -59, 4, -59, -18, -58, -21, -56, -24, -54, -26, -53, -29, -52, -34, -50, -38, -46, -41, -42, -44, -38, -46, -33, -47, -30, -46, -29, -45, -27, -46, -27, -49, -24, -51, -20, -54, -15, -56, -11, -56, -10, -53, -6, -56, 0, -58, 6, -59, 12, -58, 13, -57, 20, -60, 26, -60, 29, -57, 32, -55, 34, -52, 36, -49, 37, -46, 40, -45, 42, -43, 45, -40, 46, -38, 46, -35, 48, -32, 50, -28, 55, -28, 58, -27, 61, -25, 65, -22, 71, -15)

[node name="Player" type="CharacterBody2D" groups=["Entity"]]
collision_mask = 31
script = ExtResource("1_6upo2")

[node name="PlayerImage" type="Sprite2D" parent="."]
position = Vector2(38, 2)
rotation = 1.5708
texture = ExtResource("1_0nww7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_swp8s")

[node name="ShootLReloadTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="GrenadeReloadTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ShootStartPositions" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="ShootStartPositions"]
position = Vector2(132, 21)

[node name="Marker2D2" type="Marker2D" parent="ShootStartPositions"]
position = Vector2(132, 13)

[node name="Marker2D3" type="Marker2D" parent="ShootStartPositions"]
position = Vector2(132, 29)

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(132, 21)
emitting = false
amount = 5
process_material = SubResource("ParticleProcessMaterial_chrsn")
texture = ExtResource("3_lcjhx")
lifetime = 0.15
one_shot = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_jhbuq")
metadata/_edit_lock_ = true

[connection signal="timeout" from="ShootLReloadTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="GrenadeReloadTimer" to="." method="_on_grenade_reload_timer_timeout"]
